# rust-poc-macro-emit-data

./: Cargo.toml  README.md
examples/: example.rs
src/: lib.rs
