[package]
name = "poc-macro-emit-data"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.11", features = ["full", "extra-traits"]}
quote = "1.0.2"
proc-macro2 = "1.0.6"
